# steckrs

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: audit.yaml  cargo.yaml  release.yaml
examples/: a.rs  command_processor.rs  hello.rs  text_processor.rs
src/: error.rs  hook.rs  lib.rs  macros.rs
