[package]
name = "steckrs"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "MIT"
description = "small trait based plugin system for rust "
readme = "README.md"
homepage = "https://github.com/PlexSheep/steckrs"
repository = "https://github.com/PlexSheep/steckrs"


[dependencies]
anyhow = "1.0.97"
thiserror = "2.0.12"
