[package]
name = "steckrs"
version = "0.4.1"
edition = "2021"
publish = true
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "LGPL-3.0-or-later"
description = "A lightweight, trait-based plugin system for Rust applications and libraries"
readme = "README.md"
homepage = "https://github.com/PlexSheep/steckrs"
repository = "https://github.com/PlexSheep/steckrs"
documentation = "https://docs.rs/steckrs"
keywords = ["plugin", "extension", "hook", "modular", "framework"]
categories = ["rust-patterns", "development-tools", "api-bindings"]
exclude = [".github/"]

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
serde_json = "1.0.140"

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }
